--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -329,68 +329,60 @@
      <!--  Historical Sights -->
     
     
-    <string name="Historical_siight1_name" >  </string>
-    <string name="Historical_siight1_address" >  </string>
-    <string name="Historical_siight1_historical_information" >  </string>
+    <string name="Historical_siight1_name" >Mahayana Buddhist Temple  </string>
+    <string name="Historical_siight1_address" > 133 Canal St, New York, NY 10002 </string>
+    <string name="Historical_siight1_historical_information" > The Mahayana Buddhist Temple is free, open to the public and offers a large meditation area with plenty of space to rest and reflect under the gaze of a 16-foot-high golden Buddha. Just don't expect silence here; there's usually a festive sound track playing (this is New York City, after all). While the giant Buddha is the temple's main attraction, don't miss the series of intricate ivory carvings on display in the second-floor gift shop (none are for sale). </string>
     <string name="Historical_siight1_images" >  </string>
-    <string name="Historical_siight1_website" >  </string>
+    <string name="Historical_siight1_website" >https://www.nycgo.com/arts-culture/mahayana-buddhist-temple  </string>
     
-    <string name="Historical_siight2_name" >  </string>
-    <string name="Historical_siight2_address" >  </string>
-    <string name="Historical_siight2_historical_information" >  </string>
+    <string name="Historical_siight2_name" > Museum of Chinese in America </string>
+    <string name="Historical_siight2_address" > 215 Centre St, New York, NY 10013 </string>
+    <string name="Historical_siight2_historical_information" > The Museum promotes dialogue and understanding among people of all cultural backgrounds, bringing 160 years of Chinese American history to vivid life through its innovative exhibitions, educational and cultural programs. </string>
     <string name="Historical_siight2_images" >  </string>
-    <string name="Historical_siight2_website" >  </string>
+    <string name="Historical_siight2_website" > www.mocanyc.org </string>
     
-    <string name="Historical_siight3_name" >  </string>
-    <string name="Historical_siight3_address" >  </string>
-    <string name="Historical_siight3_historical_information" >  </string>
+    <string name="Historical_siight3_name" >The Five Points - Point 3  </string>
+    <string name="Historical_siight3_address" > 5111 Canal St, New York, NY 10002 </string>
+    <string name="Historical_siight3_historical_information" > Five Points (or The Five Points) was a 19th-century neighborhood in Lower  Manhattan, New York City. The neighborhood was generally defined as being bound by Centre Street to the west, the Bowery to the east, Canal Street to the  north, and Park Row to the south. </string>
     <string name="Historical_siight3_images" >  </string>
-    <string name="Historical_siight3_website" >  </string>
+    <string name="Historical_siight3_website" > https://en.wikipedia.org/wiki/Five_Points,_Manhattan </string>
     
-    <string name="Historical_siight4_name" >  </string>
-    <string name="Historical_siight4_address" >  </string>
-    <string name="Historical_siight4_historical_information" >  </string>
+    <string name="Historical_siight4_name" >The Five Points - Point 2  </string>
+    <string name="Historical_siight4_address" > 160 Centre St, New York, NY 10013 </string>
+    <string name="Historical_siight4_historical_information" > Five Points (or The Five Points) was a 19th-century neighborhood in Lower  Manhattan, New York City. The neighborhood was generally defined as being bound by Centre Street to the west, the Bowery to the east, Canal Street to the  north, and Park Row to the south. </string>
     <string name="Historical_siight4_images" >  </string>
-    <string name="Historical_siight4_website" >  </string>
+    <string name="Historical_siight4_website" > https://en.wikipedia.org/wiki/Five_Points,_Manhattan </string>
     
-    <string name="Historical_siight5_name" >  </string>
+    <string name="Historical_siight5_name" >Jarmulowski Building  </string>
     <string name="Historical_siight5_address" >  </string>
-    <string name="Historical_siight5_historical_information" >  </string>
+    <string name="Historical_siight5_historical_information" > The Jarmulowsky Bank Building is a 12-story building formerly housing the  Jarmulowsky Bank on the Lower East Side of Manhattan, New York City. Located  at Canal Street and Orchard Street, the Jarmulowsky Bank Building was built by  architects Rouse & Goldstone in 1912, in Beaux-Arts style.  </string>
     <string name="Historical_siight5_images" >  </string>
-    <string name="Historical_siight5_website" >  </string>
+    <string name="Historical_siight5_website" >https://en.wikipedia.org/wiki/Jarmulowsky_Bank_Building </string>
     
-    <string name="Historical_siight6_name" >  </string>
-    <string name="Historical_siight6_address" >  </string>
-    <string name="Historical_siight6_historical_information" >  </string>
+    <string name="Historical_siight6_name" > Edward Mooney House </string>
+    <string name="Historical_siight6_address" > 18 Bowery, New York, NY 10013 </string>
+    <string name="Historical_siight6_historical_information" >The Edward Mooney House located at 18 Bowery at the corner of Pell Street in  the Chinatown neighborhood of Manhattan, New York City was built between  1785 and 1789 for wealthy butcher Edward Mooney on land he purchased after it  was confiscated from British Loyalist James De Lancey. The Jarmulowsky Bank Building is a 12-story building formerly housing the  Jarmulowsky Bank on the Lower East Side of Manhattan, New York City. Located  at Canal Street and Orchard Street, the Jarmulowsky Bank Building was built by  architects Rouse & Goldstone in 1912, in Beaux-Arts style.   </string>
     <string name="Historical_siight6_images" >  </string>
-    <string name="Historical_siight6_website" >  </string>
+    <string name="Historical_siight6_website" > https://en.wikipedia.org/wiki/Edward_Mooney_House </string>
     
-    <string name="Historical_siight7_name" >  </string>
-    <string name="Historical_siight7_address" >  </string>
-    <string name="Historical_siight7_historical_information" >  </string>
+    <string name="Historical_siight7_name" > Pike Street Synagogue </string>
+    <string name="Historical_siight7_address" > 5 Pike St, New York, NY 10002 </string>
+    <string name="Historical_siight7_historical_information" > The Pike Street Synagogue, constructed in 1903-04 for the. Congregation Sons of Israel Kalwarie, is a rare surviving synagogue building from that period of New York's history when the. Lower East Side served as America's main portal for millions of Jewish immigrants.  </string>
     <string name="Historical_siight7_images" >  </string>
-    <string name="Historical_siight7_website" >  </string>
+    <string name="Historical_siight7_website" > http://www.nyc.gov/html/lpc/downloads/pdf/reports/pikestreet.pdf </string>
     
-    <string name="Historical_siight8_name" >  </string>
-    <string name="Historical_siight8_address" >  </string>
-    <string name="Historical_siight8_historical_information" >  </string>
+    <string name="Historical_siight8_name" >Columbus Park  </string>
+    <string name="Historical_siight8_address" > 67 Mulberry St, New York, NY 10013 </string>
+    <string name="Historical_siight8_historical_information" > Columbus Park located in the heart of China Town is a great place to visit with the children and have a wonderful day. There is seating and swings with a safe area where the children could play. Most of the time you will run into musicians playing their music live.  </string>
     <string name="Historical_siight8_images" >  </string>
-    <string name="Historical_siight8_website" >  </string>
+    <string name="Historical_siight8_website" > https://www.nycgovparks.org/parks/columbus-park-m015 </string>
     
-    <string name="Historical_siight9_name" >  </string>
-    <string name="Historical_siight9_address" >  </string>
+    <string name="Historical_siight9_name" > Chinatown Soup </string>
+    <string name="Historical_siight9_address" > The fantasies and confusion one may harbor about the eastern terminus of Canal Street are understandable because Chinatown is the crossroads where the city's past and future meet. Here remains one of the few Manhattan communities that fosters a sense of respect for its history.16B Orchard Street (Canal Street) New York, NY 10002 </string>
     <string name="Historical_siight9_historical_information" >  </string>
     <string name="Historical_siight9_images" >  </string>
-    <string name="Historical_siight9_website" >  </string>
-    
-    <string name="Historical_siight10_name" >  </string>
-    <string name="Historical_siight10_address" >  </string>
-    <string name="Historical_siight10_historical_information" >  </string>
-    <string name="Historical_siight10_images" >  </string>
-    <string name="Historical_siight10_website" >  </string>
-    
-    
-    
+    <string name="Historical_siight9_website" >www.chinatownsoup.nyc  </string>
+
     
     
     <!--  Food -->
