--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="transport_button">Transport</string>
     <string name="food_button">Food</string>
     <string name="hotel_button">Hotel</string>
-    <string name="poi_button">Points Of Interest</string>
+    <string name="activities_button">Activities</string>
     <string name="history_button">History</string>
     <string name="itinerary_button">Itinerary</string>
 
